# porcula-rs

./: .gitignore  Cargo.toml  README.md  project-crates.pl  t.cmd
src/: assets.rs  fb2_parser.rs  fts.rs  genre_map.rs  img_resizer.rs  letter_replacer.rs  main.rs  mtime_checker.rs  sort.rs  types.rs
src/cmd/: facet.rs  index.rs  mod.rs  query.rs  server.rs
static/: authors.html  common.js  genre-map.txt  genres.html  home.html  keywords.html  render.css  render.html  render.js  site.css
