[package]
name = "porcula"
version = "0.6.0"
authors = ["alexey.s.v.br@gmail.com"]
edition = "2018"
publish = false

[profile.dev.package.adler]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.tantivy]
opt-level = 3

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "fat"
strip = true

[dependencies]
tantivy = { version = "0.20", features = ["mmap"] }
quick-xml = { version = "0.29", default-features = false, features = [] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
image = { version = "0.24", default-features = false, features = ["jpeg","png","gif","bmp","webp"] }
rouille = { version = "3.6", default-features = false }
atom_syndication = "0.12"
base64 = "0.21"
bytesize = "1.2"
chardet = "0.2"
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
ctrlc = "3.4"
deepsize = "0.2"
encoding_rs = "0.8"
env_logger = "0.10"
htmlescape = "0.3"
lazy_static = "1.4"
log = "0.4"
percent-encoding = "2.3"
rand = "0.8"
rayon = "1.7"
regex = "1.8"
serde = "1.0"
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
systemstat = "0.2"
